examples/invalid/unsed_var.reqlang
```%config
[[vars]]
name = "base_url"
default = "https://example.com"
```

```%request
GET / HTTP/1.1
```
